# quroute

./: .gitignore  AI-Collaboration.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/physics/: README.md
examples/: quickstart.py  run_benchmark.py  train_and_benchmark_gnn.py  train_reinforce.py
src/quroute/: __init__.py  dag.py  env.py  pass_.py  policies.py  topology.py
src/quroute/agents/: __init__.py  base.py  greedy.py  learned.py  policy_router.py
src/quroute/benchmark/: __init__.py  circuits.py  plots.py  runner.py
src/quroute/train/: __init__.py  circuits.py  gnn.py  reinforce.py
tests/: test_benchmark.py  test_env.py  test_gnn.py  test_routing.py  test_topology.py  test_train.py
